--- a/index.html
+++ b/index.html
@@ -118,29 +118,32 @@
                         class="btn btn-custom btn-custom-mode tooltip-button active"
                         id="btnD"
                       >
-                        D
-                        <div class="tooltip">Day</div>
+                        Y
+                        <div class="tooltip">Yesterday</div>
                       </button>
                       <button
                         class="btn btn-custom btn-custom-mode tooltip-button"
                         id="btnW"
                       >
                         W
-                        <div class="tooltip">Week</div>
+                        <div class="tooltip">Last week</div>
                       </button>
                       <button
                         class="btn btn-custom btn-custom-mode tooltip-button"
                         id="btnM"
                       >
                         M
-                        <div class="tooltip">Month</div>
+                        <div class="tooltip">Last month</div>
                       </button>
                     </div>
                   </div>
 
                   <div class="btn-group-right">
                     <button class="button-block">Worldwide</button>
-                    <button class="button-block">All devices</button>
+                    <div class="display-flex-colum">   
+                      <button class="download-pdf" onclick="saveAsPDF()"><i class="fa-solid fa-download"></i></button>
+                      <button class="button-block">All devices</button>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -157,9 +160,7 @@
                           >?</span
                         >
                       </div>
-                      <h1 class="card-title" id="total-visits-number">
-                        107,518
-                      </h1>
+                      <h1 class="card-title" id="total-visits-number"></h1>
                     </div>
                   </div>
                 </div>
@@ -206,9 +207,8 @@
             <div class="card-body">
               <h2 class="card-title">Visits over time</h2>
               <p class="card-text" id="visits-text">
-                This chart displays the trend of daily visits over the past 3
-                days. It provides a general tendency of traffic flow rather than
-                exact numbers
+                This chart displays the trend of daily visits over the selected
+                time period
               </p>
               <div id="line_chart" style="width: 100%; height: auto"></div>
             </div>
@@ -293,6 +293,9 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
